# sniffle

./: .gitignore  .gitmodules  CLAUDE.md  README.md  THIRD_PARTY_LICENSES  build.sh  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: fastpair_models.json  oui.csv
app/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp
app/src/main/java/de/schaefer/sniffle/: App.kt  MainActivity.kt
app/src/main/java/de/schaefer/sniffle/background/: NotificationHelper.kt  ScanService.kt  ScanWorker.kt
app/src/main/java/de/schaefer/sniffle/ble/: AdvertParser.kt  BleScanner.kt  ClassicScanner.kt  ScanCoordinator.kt  ScanProcessor.kt  TheengsDecoder.kt
app/src/main/java/de/schaefer/sniffle/classify/: AppearanceResolver.kt  DeviceClassifier.kt  FastPairLookup.kt  MacClassifier.kt  OuiLookup.kt  ServiceUuidResolver.kt
app/src/main/java/de/schaefer/sniffle/data/: AppDatabase.kt  DeviceDao.kt  DeviceEntity.kt  Section.kt  SightingEntity.kt
app/src/main/java/de/schaefer/sniffle/decoder/: BtHomeDecoder.kt  ContinuityDecoder.kt  DecoderChain.kt  EddystoneDecoder.kt  FastPairDecoder.kt  FmdnDecoder.kt  IBeaconDecoder.kt  MsCdpDecoder.kt  RuuviDecoder.kt
app/src/main/java/de/schaefer/sniffle/ui/: DeviceList.kt  SniffleTopBar.kt
app/src/main/java/de/schaefer/sniffle/util/: ByteUtils.kt  Formatting.kt  (+1 more)
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: data_extraction_rules.xml
gradle/: libs.versions.toml
(+21 files in other folders)
